Fixing header whitespace

--- a/css/style.scss
+++ b/css/style.scss
@@ -39,7 +39,7 @@ h3 {
 h4 {
   font-family: "Roboto", sans-serif;
   text-align: center;
-  margin: 1em;
+  padding: 1em;
   font-weight: 500;
 }
 h6 {
